--- a/.packit.yaml
+++ b/.packit.yaml
@@ -1,18 +1,17 @@
-# See the documentation for more information:
-# https://packit.dev/docs/configuration/
-
-specfile_path: pyrpm-clean.spec
+specfile_path: dist/pyrpm-clean.spec
 
 jobs:
   - job: copr_build
     trigger: pull_request
     targets:
       - fedora-all
+      - epel-all
 
   - job: copr_build
     trigger: commit
     targets:
       - fedora-all
+      - epel-all
     owner: "nikromen"
     project: "pyrpm-clean"
     branch: main
