--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,9 @@
+ci:
+  autofix_prs: false
+
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.4.0
+    rev: v5.0.0
     hooks:
       - id: check-added-large-files
       - id: check-ast
@@ -14,53 +17,32 @@ repos:
       - id: destroyed-symlinks
       - id: end-of-file-fixer
       - id: mixed-line-ending
+      - id: detect-private-key
+      - id: check-toml
+      - id: pretty-format-json
         args:
           - --fix=lf
       - id: trailing-whitespace
-      - id: detect-private-key
 
   - repo: https://github.com/pre-commit/mirrors-prettier
-    rev: v3.0.0-alpha.9-for-vscode
+    rev: v4.0.0-alpha.8
     hooks:
       - id: prettier
 
-  - repo: https://github.com/psf/black
-    rev: 23.3.0
-    hooks:
-      - id: black
-
-  - repo: https://github.com/PyCQA/flake8
-    rev: 6.0.0
-    hooks:
-      - id: flake8
-        args:
-          - --max-line-length=88
-          - --extend-ignore=E203
-
   - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v1.3.0
+    rev: v1.11.2
     hooks:
       - id: mypy
-        additional_dependencies:
-          - types-PyYAML
-          # https://github.com/pydantic/pydantic/issues/3953
-          - pydantic >= 1.10.4
+        additional_dependencies: [types-setuptools]
 
   - repo: https://github.com/asottile/pyupgrade
-    rev: v3.4.0
+    rev: v3.17.0
     hooks:
       - id: pyupgrade
 
-  - repo: https://github.com/pycqa/isort
-    rev: 5.6.4
+  - repo: https://github.com/astral-sh/ruff-pre-commit
+    rev: v0.6.9
     hooks:
-      - id: isort
-        args: ["--profile", "black", "--filter-files"]
-
-  - repo: https://github.com/packit/pre-commit-hooks
-    rev: v1.2.0
-    hooks:
-      - id: check-rebase
-        args:
-          - https://github.com/packit/packit-service.git
-        stages: [manual, push]
+      - id: ruff
+        args: [--fix, --exit-non-zero-on-fix]
+      - id: ruff-format
