--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -52,6 +52,7 @@ repos:
     rev: 23.3.0
     hooks:
       - id: black
+        args: ["--line-length", "100"]
 
   - repo: https://github.com/PyCQA/flake8
     rev: 6.0.0
