--- a/.packit.yaml
+++ b/.packit.yaml
@@ -5,13 +5,13 @@ jobs:
     trigger: pull_request
     targets:
       - fedora-all
-      - epel-all
+      - epel-9
 
   - job: copr_build
     trigger: commit
     targets:
       - fedora-all
-      - epel-all
+      - epel-9
     owner: "nikromen"
     project: "pyclean"
     branch: main
