--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ packages = [{ include = "pyclean" }]
 [tool.poetry.dependencies]
 python = "^3.9"
 click = ">=8.0.0"
+tqdm = ">=4.60.0"
+setuptools = ">=57.0.0"
 
 
 [tool.poetry.dev-dependencies]
