--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -18,7 +18,7 @@ jobs:
       - uses: actions/checkout@v3
       - name: Install dependencies
         run: |
-          dnf install -y poetry
+          dnf install -y poetry which
           poetry install --no-root
       - name: Run unit tests
         run: |
